--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-select": "^4.3.0",
-    "reset-css": "^5.0.1",
     "styled-components": "^5.2.3",
+    "styled-reset": "^4.3.4",
     "typescript": "^4.1.2"
   },
   "scripts": {
@@ -30,5 +30,17 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
